MODLOGSAML-111: Additional JUnit tests.